<resources>
    <string name="app_name">RickAndMortyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="blank">Blank</string>
    <string name="character_image">Character Image</string>
    <string name="character_status">Character Status</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="code">Code</string>
    <string name="episode">Episode</string>
    <string name="character_details">Character Details</string>
    <string name="blank_fragment">Blank Fragment</string>
</resources>