<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/charactersFragment">

    <fragment
        android:id="@+id/charactersFragment"
        android:name="com.example.rickandmortyapp.UI.characters.characters.CharactersFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_characters">
        <action
            android:id="@+id/action_charactersFragment_to_characterReviewFragment"
            app:destination="@id/characterReviewFragment" />
    </fragment>
    <fragment
        android:id="@+id/episodesFragment"
        android:name="com.example.rickandmortyapp.UI.episodes.episodes.EpisodesFragment"
        android:label="@string/episodes"
        tools:layout="@layout/fragment_episodes" />
    <fragment
        android:id="@+id/blankFragment"
        android:name="com.example.rickandmortyapp.UI.blank.BlankFragment"
        android:label="@string/blank_fragment"
        tools:layout="@layout/fragment_blank" />
    <fragment
        android:id="@+id/characterReviewFragment"
        android:name="com.example.rickandmortyapp.UI.characters.characterReview.CharacterReviewFragment"
        android:label="@string/character_details"
        tools:layout="@layout/fragment_character_review">
        <argument
            android:name="characterStatus"
            app:argType="string" />
        <argument
            android:name="characterSpecies"
            app:argType="string" />
        <argument
            android:name="characterGender"
            app:argType="string" />
        <argument
            android:name="characterOrigin"
            app:argType="string" />
        <argument
            android:name="characterName"
            app:argType="string" />
        <argument
            android:name="characterImage"
            app:argType="string" />
    </fragment>
</navigation>